# djamp-pro

./: .gitignore  AGENTS.md  LICENSE  README.md  TESTING_GUIDE.md  package-lock.json  package.json  setup-blockchain.sh  test-certs-test.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  maintainer_weekly_checklist.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-label.yml  dependabot-auto-review.yml  issue-triage.yml  monthly-roadmap.yml  pr-labeler.yml  release-cadence.yml  release-drafter.yml  release.yml  stale.yml
apps/: index.html  tauri.conf.json
apps/desktop/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  I18nProvider.tsx  ThemeProvider.tsx  confirm.ts  i18n.ts  index.css  main.tsx  theme.ts  toast.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs  sidecar.rs
apps/desktop/src/components/: AddProjectModal.tsx  ConfirmProvider.tsx  ProjectAvatar.tsx  ProjectCard.tsx  ProjectList.tsx  SettingsPanel.tsx  Spinner.tsx  ToastProvider.tsx
apps/desktop/src/services/: api.ts  mock.ts
apps/desktop/src/types/: index.ts
apps/desktop/src/utils/: index.ts
apps/src/: index.css
configs/caddy/: Caddyfile.template
configs/django/: settings.py.template
core/: Cargo.toml
core/src/: main.rs
core/src-tauri/: tauri.conf.json
core/src/commands/: config.rs  privilege.rs  process.rs
core/src/privilege/: certificate.rs  hosts.rs  mod.rs
core/src/storage/: config_manager.rs  mod.rs
core/src/utils/: crypto.rs  mod.rs  paths.rs
docs/: ARCHITECTURE.md  BUILD.md  CODEX_AUTO_REVIEW_SMOKE_TEST.md  CODEX_REVIEW_SMOKE_TEST.md  FAQs.md  INSTALL_MACOS.md  MAINTAINER_PLAYBOOK.md  QUICKSTART_5_MIN.md  TROUBLESHOOTING.md  UNINSTALL.md
legacy/: README.md
legacy/apps/: Cargo.toml  package-lock.json  package.json
legacy/apps/src/: App.tsx
legacy/apps/src-tauri/: Cargo.toml  tauri.conf.json
legacy/apps/src-tauri/src/: commands.rs  main.rs
legacy/apps/src/components/: AddProjectModal.tsx  ProjectCard.tsx  ProjectList.tsx  SettingsPanel.tsx
legacy/apps/src/services/: api.ts
legacy/apps/src/types/: index.ts
legacy/controller-old/djamp_controller_core/: database.py  django.py
legacy/mamp-pro-style/: package.json
legacy/service/: pyproject.toml  requirements.txt
legacy/service/djamp_service/: main.py
legacy/service/djamp_service/api/: certificates.py  databases.py  utilities.py
legacy/src-tauri/: Cargo.toml  tauri.conf.json
legacy/src-tauri/icons/: icon.icns
legacy/src-tauri/src/: main.rs
scripts/: bundle-binaries.sh  generate-cert.sh  install-ca.ps1  install-ca.sh  setup-dev.sh
scripts/djamp-pro/: generate-caddy-config.py  generate-cert.sh  install-ca.sh  update-hosts.sh
service/djamp_service/: __init__.py
service/djamp_service/api/: projects.py
service/djamp_service/core/: caddy.py  certificate.py
services/controller/: pyproject.toml  requirements-dev.txt  requirements.txt  run_service.py
services/controller/djamp_controller/: __init__.py  certificates.py  database.py  domains.py  frameworks.py  macos_helper.py  main.py  models.py  paths.py  processes.py  proxy.py  registry.py  subprocess_security.py
services/controller/tests/: test_frameworks.py  test_health.py  test_parent_watchdog.py  test_parsing_and_paths.py  test_project_safety.py
services/priv-helper/: Cargo.toml
services/priv-helper/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/storage/: mod.rs
test_project/certs_test/: .gitignore  ROLLBACK_ADVANCED_SYSTEM.sh  SETUP_ADVANCED_SYSTEM.sh  SETUP_TRANSCRIPT_SYSTEM.sh  START_HERE.md  add_templates.py  check_advanced_setup.py  create_admin_profile.py  create_advanced_role.py  create_roles.py  create_transcript_role.py  fix_user_permissions.py  manage.py  robots.txt  update_role_permissions.py
test_project/certs_test/blockchain_certificates/: asgi.py  services.py  settings.py  urls.py  views.py  wsgi.py
test_project/certs_test/blockchain_certificates/auth_backends/: api_backend.py  cas_backend.py  local_backend.py  nafath_backend.py
test_project/certs_test/certificates/: admin.py  advanced_generator.py  api.py  api_auth.py  apps.py  blockchain.py  certificate_generator.py  constants.py  constants_transcript.py  decorators.py  email_service.py  forms.py  forms_advanced.py  forms_role.py  forms_template.py  forms_transcript.py  models.py  models_advanced.py  models_role.py  models_template.py  models_transcript.py  signals.py  transcript_generator.py  urls.py  views.py  views_advanced.py  views_advanced_template.py  views_base.py  views_role.py  views_template.py  views_transcript.py  views_transcript_template.py
test_project/certs_test/certificates/block_listed/: Block_Listed.xlsx  Block_Listed_V1.xlsx  Block_Listed_V2.xlsx  Block_Listed_V3.xlsx
test_project/certs_test/certificates/migrations/: 0001_initial.py  0002_rename_created_by_id_certificate_created_by.py  0003_alter_block_output_file.py  0004_certificate_arabicfamilyname_and_more.py  0005_remove_certificate_arabicfamilyname_and_more.py  0006_userdetails_unique_id.py  0007_remove_userdetails_unique_id.py  0008_role_alter_block_output_file_userprofile_and_more.py  0009_alter_block_output_file_and_more.py  0010_alter_certificatetemplate_name.py  0011_auto_20250902_1427.py  0012_userprofile_is_temporary_role_and_more.py  0013_rename_advanced_role.py  0013_role_can_create_advanced_certificates_and_more.py  0014_merge_20251123_1511.py  0015_alter_advancedcertificate_options_and_more.py  0016_add_multi_role_support.py  0017_migrate_roles_data.py
test_project/certs_test/certificates/pdf_templates/: AI_club_thanks_student_template.json  DS_1_template.json  Edu_course_template.json  IT_course_template.json  (+4 more)
(+77 files in other folders)
