[lib]
name = "djangoforge"
path = "src/lib.rs"

[package]
name = "djangoforge"
version = "0.1.0"
description = "Local Django Development Environment Manager"
authors = ["DJANGOForge Team"]
license = "MIT"
repository = "https://github.com/MohamedMohana/djangoforge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-exists", "fs-read-dir", "fs-read-file", "process-exit", "fs-remove-file", "fs-create-dir", "fs-remove-dir", "process-relaunch", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "securitybaseapi", "processthreadsapi"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
