[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djamp-controller"
version = "1.0.0"
description = "DJAMP PRO controller service"
authors = [{ name = "DJAMP PRO Team" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.1.8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
