[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djamp-controller"
version = "1.2.3"
description = "DJAMP PRO controller service"
authors = [{ name = "DJAMP PRO Team" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.128.8",
  "uvicorn[standard]>=0.39.0",
  "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.15.10",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
