[package]
name = "djamp-pro"
version = "1.0.1"
description = "DJAMP PRO Desktop Host"
authors = ["DJAMP PRO Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
once_cell = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
